
add_executable(peng_vector_test vector_test.cpp)

add_executable(peng_RAII RAII.cpp)

add_executable(peng_constructor constructor.cpp)

add_executable(peng_smartpoint smartpoint.cpp)

add_executable(peng_RAII_pointer_test test.cpp)

add_executable(peng_new_delete new_delete.cpp)

add_executable(peng_malloc_free malloc_free.cpp)

add_executable(peng_slef_sharedptr slef_sharedptr.cpp)